--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,6 @@ version '1.0.0'
 
 apply plugin: 'java'
 
-sourceCompatibility = 1.5
 
 repositories {
     mavenCentral()
@@ -11,4 +10,5 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
+    compile fileTree(include: ['*.jar'], dir: 'src/main/libs')
 }
